<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B9966"
    tools:context="com.example.tsv1.DisplayMessageActivity"
    tools:ignore="MergeRootFrame" xmlns:android="http://schemas.android.com/apk/res/android"
     >

    <!--
    <TextView
        android:id="@+id/textView3"
        android:layout_height="216dp"
        android:layout_gravity="fill_horizontal"
        android:background="#0b9966"
        android:text="@string/What_not"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="left|bottom"
        android:layout_row="2"
        android:background="#09895b" />
    -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="793dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:textAlignment="center" >

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
              
                 android:text="@string/What"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ffffff"
                 android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/What_response"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

        

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="false"
                android:adjustViewBounds="false"
                android:maxHeight="300dp"
                android:maxWidth="200dp"
                android:scaleType="fitEnd"
                android:src="@drawable/plastic"  
                android:contentDescription="@string/ImageButton"
                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="130dp"
                 android:maxHeight="300dp"
                android:maxWidth="200dp"
                android:scaleType="fitEnd"
                android:contentDescription="@string/ImageButton"
                android:src="@drawable/cans" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="250dp"
                android:layout_height="170dp"
                android:layout_alignParentEnd="false"
                android:adjustViewBounds="false"
                android:contentDescription="@string/ImageButton"
                android:maxHeight="300dp"
                android:maxWidth="200dp"
                android:scaleType="fitEnd"
                android:src="@drawable/paperuse" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="170dp"
                android:layout_alignParentEnd="false"
                android:adjustViewBounds="false"
                android:contentDescription="@string/ImageButton"
                android:maxHeight="300dp"
                android:maxWidth="200dp"
                android:scaleType="fitEnd"
                android:src="@drawable/glass" />
            
     
            
            
            
            

</LinearLayout>

</ScrollView>